# GSGE

./: .coveragerc  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  install.sh  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
GSGE/: __init__.py  chem.py  clustering.py  core_gsge.py  embedding.py  fragment_descriptors.py  fragment_functions.py  fragment_tools.py  gsge.py  plots.py  tokenizer.py  utils_chem.py  visualization.py  vocab.py
GSGE/graphs/compound_graph/: data.py
GSGE/graphs/fragment_graph/: GAE.py  from_smiles_to_graph.py  parsed_log_metric_plots.py  test_GAE.py
GSGE/scripts/: CLI.py
docs/: dev_environment.yml  docstring_template.md  index.md
docs/about/: citation.md  license.md
docs/api-reference/: clustering.md  descriptors.md  embedding.md  gae.md  gsge.md  index.md  plots.md  tokenizer.md  vocab.md
docs/development/: changelog.md  contributing.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/tutorials/: index.md
docs/user-guide/: compound-graphs.md  index.md  vocabularies.md
tests/: conftest.py  subset_smiles_1000.pkl  test_backwards_compat.py  test_clustering.py  test_compound_graph_comprehensive.py  test_core_gsge.py  test_descriptors.py  test_edge_cases.py  test_embedding.py  test_gae.py  test_gsge_tokenization.py  test_import.py  test_integration.py  test_lookup_table_emb_layer.py  test_make_cg.py  test_make_gsge_corpus.py  test_make_gsge_vocab.py  test_plots.py  test_save_load_verification.py  test_tokenizer_comprehensive.py  test_vocab.py
use_examples/: README.md
use_examples/00_making_vocabs/: README.md  vocabulary_and_corpus_tutorial.ipynb
use_examples/00_making_vocabs/vocabs/: GS_vocab_v5  GS_vocab_v5_a  GS_vocab_v5_a2  gsge_save_v5a2.pkl
use_examples/01_make_compound_graphs/: README.md  compound_graphs_tutorial.ipynb
use_examples/02_tokenization_example/: README.md  tokenization_tutorial.ipynb
use_examples/03_GAE/: README.md  embedding_visualization.ipynb  gae_training_monitor.ipynb  test_gsge_save.pkl  test_gsge_save_with_descriptors.pkl  train_GAE.py
use_examples/04_use_embeddings/: README.md  embeddings_tutorial.ipynb
use_examples/05_mol_frag_features/: README.md  fragment_descriptors.ipynb  gsge_with_custom_descriptors.pkl  test_gsge_save_with_7_descriptors_2d3d.pkl
use_examples/06_end_to_end/: README.md  property_prediction_tutorial.ipynb
use_examples/06_end_to_end/tutorial_corpus/: GSGE_corpus
use_examples/06_end_to_end/tutorial_vocab/: GS_Vocab
